Fix(index): scroll on footer overflow (#4)
* Generate category pages from contentful

* Fix(index): scroll on footer overflow

--- a/src/components/base.css
+++ b/src/components/base.css
@@ -110,6 +110,7 @@ a {
   background-color: #333;
   text-align: center;
   padding: 10px;
+  overflow-x: auto
 }
 
 .feet .foot .title {
